Adjusted spacing to resolve https://github.com/uiowa/uids/issues/186.

--- a/components/01 - elements/heading/_heading.scss
+++ b/components/01 - elements/heading/_heading.scss
@@ -30,7 +30,7 @@ h2.bold-headline {
 .bold-headline--underline {
   padding-bottom: $sm;
   line-height: 1.3;
-  display: inline-block;
+  display: inline;
   background-size: 1px 1em;
   box-shadow:
     inset 0 -0.175em white,
